# eit-robogamer

./: .gitignore  .gitmodules  Cargo.toml  README.md  calibrationdata_blue.json  calibrationdata_red.json  index.js  localTeam.js  package-lock.json  package.json  presetation.md  readme.md  robots.json  test.pnm  test2.pnm
camera/: Cargo.toml
camera/src/: lib.rs  main.rs
cameraserver/marker_manager/: camera_calibration.py  data.txt  generator.py  processor.py  scaner.py  test.py
cameraserver/tracking_manager/: calib_mtx.npy  pose_estimate.py  robo_scanner.py
firmware/: tests.py
firmware/bot-firmware/: bot-firmware.ino
gameserver/: package.json  tsconfig.json
gameserver/src/: Bot.ts  BotPhysics.ts  Box2DPhysics.ts  Game.ts  GameState.ts  index.ts  (+1 more)
opponents/: random.js
public/: box2d.html  index.html  main.js  render.js  state.js
putlebot-cli/: Cargo.toml
putlebot-server/: Cargo.toml
putlebot-server/src/: bots.rs  lib.rs  models.rs
putlebot-server/src/bots/: bot_physics.rs  bot_pos.rs  engine_power.rs
putlebot-server/src/models/: angle.rs  bot.rs  options.rs  point.rs
robogamer/: package-lock.json  package.json  readme.md  robots.json
src/: Bot.ts  BotPhysics.ts  Box2DPhysics.ts  Cli.test.ts  Cli.ts  Game.ts  Loader.ts  RoboGamer.test.ts  RoboGamer.ts  UiClient.ts  camera.rs  index.ts  lib.rs  main.rs  models.rs  speedtest.ts  tagging.rs
strategies/: testRandom.ts
test/: index_test.js  index_test.ts
test_teams/: random.js  random2.js
webviewer/: index.html  main.js  sizes.js
www/: index.html  main.js  render.js  sizes.js  socket.js
(+46 files in other folders)
