[package]
name = "camera"
version = "0.1.0"
authors = ["Ole Martin Gjersvik <olgj@equinor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscam = "0.5.5"
image = "0.23.0"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable", "attributes"]