[package]
name = "putlebot-server"
version = "0.1.0"
authors = ["Ole Martin Gjersvik <olgj@equinor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2.11", features = ["macros"] }
warp = "0.2"

[dev-dependencies]
test-case = "1.0.0"
assert_approx_eq = "1.1.0"